--- a/.conkyrc
+++ b/.conkyrc
@@ -9,7 +9,7 @@ xftalpha 1
 update_interval 1.0
 total_run_times 0
 own_window yes
-own_window_transparent yes
+own_window_transparent no
 own_window_type desktop
 own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
 own_window_colour black
@@ -18,12 +18,12 @@ minimum_size 1 1
 maximum_width 240
 draw_shades no
 draw_outline no
-draw_borders no
-draw_graph_borders no
+draw_borders yes
+draw_graph_borders yes
 default_color gray
 default_shade_color 000000
 default_outline_color d9d7d6
-alignment tl
+alignment tr
 gap_x 12
 gap_y 12
 no_buffers yes
@@ -42,6 +42,8 @@ RAM: $alignr$mem/$memmax
 $membar
 SWAP: $alignr$swap/$swapmax
 $swapbar
+DISK: $alignr${diskio /dev/sda}
+${diskiograph /dev/sda}
 
 ${font sans-serif:bold:size=8}NETWORK ${hr 2}
 Download speed: ${downspeedf wlp4s0}
@@ -54,11 +56,14 @@ ${font sans-serif:normal:size=8}$sysname $kernel $alignr $machine
 Host:$alignr$nodename
 Uptime:$alignr$uptime
 
+
 ${font sans-serif:bold:size=8}TOP PROCESSES ${hr 2}
 ${font sans-serif:normal:size=8}${top_mem name 1}${alignr}${top mem 1} %
 ${top_mem name 2}${alignr}${top mem 2} %
 $font${top_mem name 3}${alignr}${top mem 3} %
 $font${top_mem name 4}${alignr}${top mem 4} %
+Processes: $alignr$processes
+
 
 ${font sans-serif:bold:size=8}SHORTCUT KEYS ${hr 2}
 ${font sans-serif:normal:size=8}
