--- a/.conkyrc
+++ b/.conkyrc
@@ -1,8 +1,27 @@
-# References:
-# http://conky.sourceforge.net/conkyrc-vert
-# http://conky.sourceforge.net/variables.html
-# man conky
-# this conky has been forked from the default one that comes with archbang linux
+#########################################################################
+# This program is free software: you can redistribute it and/or modify  #
+# it under the terms of the GNU General Public License as published by  #
+# the Free Software Foundation, either version 3 of the License, or     #
+# (at your option) any later version.				        #
+# 								        #
+# This program is distributed in the hope that it will be useful,       #
+# but WITHOUT ANY WARRANTY; without even the implied warranty of        #
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the	        #
+# GNU General Public License for more details.			        #
+# 								        #
+# You should have received a copy of the GNU General Public License     #
+# along with this program.  If not, see <http://www.gnu.org/licenses/>. #
+#########################################################################
+
+#############################################################################################
+# A simple, lightweight .conkyrc.							    #
+# This conky has been originally forked from the default one that comes with ArchBang Linux #
+# 											    #
+# References:										    #
+# - http://conky.sourceforge.net/conkyrc-vert						    #
+# - http://conky.sourceforge.net/variables.html						    #
+# - `man` conky										    #
+#############################################################################################
 
 background yes
 # better fonts
@@ -43,27 +62,31 @@ color2 gray
 ##############################################
 TEXT
 ${font sans-serif:bold:size=8}OVERVIEW ${hr 2}
-${font sans-serif:normal:size=8}CPU: $alignr${cpu cpu0}%
-${cpubar cpu0}
+${font sans-serif:normal:size=8}Battery:$alignr${battery_short BAT1} - ${battery_time BAT1}
+${battery_bar BAT1}
+CPUs: $alignr${cpu cpu0}% | ${cpu cpu1}%
+${cpubar 5,80 cpu0}$alignr${cpubar 5,80 cpu1}
 RAM: $alignr$mem/$memmax
 $membar
 SWAP: $alignr$swap/$swapmax
 $swapbar
-DISK: $alignr${diskio /dev/sda}
+DISK:$alignr${diskio /dev/sda}
 ${diskiograph /dev/sda}
+/   ${fs_bar 5,50 /}$alignr${fs_used /}/${fs_size /}
+/home $alignr${fs_used /home}/${fs_size /home}
+
 ${font sans-serif:bold:size=8}SENSOR ${hr 2}
 ${font sans-serif:normal:size=8}ACPI:$alignr$acpitemp ºC
 
 ${font sans-serif:bold:size=8}NETWORK ${hr 2}
 ${font sans-serif:normal:size=8}IP Address:$alignr${addr wlp4s0}
 AP:$alignr${wireless_essid wlp4s0}
-Strength: $alignr${wireless_link_bar 4,80 wlp4s0}  ${wireless_link_qual wlp4s0}/${wireless_link_qual_max wlp4s0}
-Down speed:$alignr${downspeedf wlp4s0}
+Link: ${wireless_link_bar 5,90 wlp4s0} $alignr ${wireless_link_qual wlp4s0}/${wireless_link_qual_max wlp4s0}
+Total D/U:$alignr${totaldown wlp4s0} / ${totalup wlp4s0}
+Down speed:$alignr${downspeedf wlp4s0} kB/s
 ${downspeedgraph wlp4s0}
-Up speed:$alignr${upspeedf wlp4s0}
+Up speed:$alignr${upspeedf wlp4s0} kB/s
 ${upspeedgraph wlp4s0}
-Total down:$alignr${totaldown wlp4s0}
-Total up:$alignr${totalup wlp4s0}
 
 ${font sans-serif:bold:size=8}SYSTEM ${hr 2}
 ${font sans-serif:normal:size=8}$sysname $kernel $alignr $machine
