--- a/.conkyrc
+++ b/.conkyrc
@@ -62,7 +62,7 @@ color2 gray
 ##############################################
 TEXT
 ${font sans-serif:bold:size=8}OVERVIEW ${hr 2}
-${font sans-serif:normal:size=8}Battery:$alignr${battery_short BAT1} - ${battery_time BAT1}
+${font sans-serif:normal:size=8}BAT:$alignr${battery_short BAT1} - ${battery_time BAT1}
 ${battery_bar BAT1}
 CPUs: $alignr${cpu cpu0}% | ${cpu cpu1}%
 ${cpubar 5,80 cpu0}$alignr${cpubar 5,80 cpu1}
