--- a/etc/verynice.conf
+++ b/etc/verynice.conf
@@ -92,6 +92,8 @@ runawayexe "Fvwm"
 runawayexe "xfig"
 runawayexe "gimp"
 runawayexe "firefox"
+runawayexe "chromium"
+runawayexe "dropbox"
 
 # Sample additional parameters, specifying the built in defaults
 #notnice    -4
