--- a/etc/ntp.conf
+++ b/etc/ntp.conf
@@ -9,6 +9,7 @@
 server 0.pool.ntp.org iburst
 server 1.pool.ntp.org iburst
 server 2.pool.ntp.org iburst
+server 3.pool.ntp.org iburst
 
 # Only allow read-only access from localhost
 restrict default noquery nopeer
