--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -18,7 +18,7 @@ HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
 #CleanMethod = KeepInstalled
-#UseDelta    = 0.7
+UseDelta    = 0.7
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
@@ -31,8 +31,8 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-#TotalDownload
 ILoveCandy
+#TotalDownload
 CheckSpace
 VerbosePkgLists
 
@@ -84,12 +84,24 @@ Include = /etc/pacman.d/mirrorlist
 [community]
 Include = /etc/pacman.d/mirrorlist
 
-[archlinuxfr]
-SigLevel= Never
-Server = http://repo.archlinux.fr/$arch
+# If you want to run 32 bit applications on your x86_64 system,
+# enable the multilib repositories as required here.
+
+#[multilib-testing]
+#Include = /etc/pacman.d/mirrorlist
+
+[multilib]
+Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
 #[custom]
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
+
+[xyne-x86_64]
+# A repo for Xyne's own projects: http://xyne.archlinux.ca/projects/
+# Packages for the "x86_64" architecture.
+# Note that this includes all packages in [xyne-any].
+SigLevel = Required
+Server = http://xyne.archlinux.ca/repos/xyne
