--- a/.conkyrc
+++ b/.conkyrc
@@ -32,7 +32,7 @@ background yes
 use_xft yes
 xftfont monospace:size=9
 xftalpha 1
-update_interval 1.0
+update_interval 2.0
 total_run_times 0
 own_window_class Conky
 own_window yes
@@ -88,10 +88,10 @@ ${font sans-serif:bold:size=8}NETWORK ${hr 2}${font sans-serif:normal:size=8}
 ${wireless_essid wlp2s0}$alignr${addr wlp2s0}
 Link: $alignr ${wireless_link_qual wlp2s0}/${wireless_link_qual_max wlp2s0}
 ${wireless_link_bar wlp2s0}
-Download:  ${totaldown wlp2s0}$alignr${downspeedf wlp2s0} kB/s
-Upload:      ${totalup wlp2s0}$alignr${upspeedf wlp2s0} kB/s
+${color 00ff00}Download:   ${totaldown wlp2s0}$alignr${downspeedf wlp2s0} kB/s
+${color 28d1e9}Upload:       ${totalup wlp2s0}$alignr${upspeedf wlp2s0} kB/s
 
-${font sans-serif:bold:size=8}SYSTEM ${hr 2}${font sans-serif:normal:size=8}
+${color gray}${font sans-serif:bold:size=8}SYSTEM ${hr 2}${font sans-serif:normal:size=8}
 $sysname $kernel $alignr$machine
 Host:$alignr$nodename
 Uptime:$alignr$uptime
