--- a/etc/verynice.conf
+++ b/etc/verynice.conf
@@ -47,17 +47,13 @@ goodexe "xmms"
 goodexe "xanim"
 goodexe "realplay"
 goodexe "rvplayer"
-goodexe "clementine"
-goodexe "audacious"
-# reduce your probability of turning out coasters from your CD drive
-goodexe "cdrecord"
-goodexe "xcdroast"
 
-# custom apps
+# cst
 goodexe "guake"
 goodexe "xfce4-terminal"
 goodexe "thunar"
-
+goodexe "clementine"
+goodexe "audacious"
 
 # Making the X server a "good" program is usually a good idea too
 #   -- X is essentially a multimedia app. These next few lines will 
@@ -91,8 +87,11 @@ runawayexe "netscape"
 runawayexe "Fvwm"
 runawayexe "xfig"
 runawayexe "gimp"
+
+# cst
 runawayexe "firefox"
 runawayexe "chromium"
+runawayexe "midori"
 runawayexe "dropbox"
 
 # Sample additional parameters, specifying the built in defaults
