--- a/.conkyrc
+++ b/.conkyrc
@@ -1,112 +1,4 @@
-# -*- lua -*-
-
-#########################################################################
-# Copyright (C) 2013-2013 Thiago Barroso Perrotta.			#
-#									#
-# This program is free software: you can redistribute it and/or modify  #
-# it under the terms of the GNU General Public License as published by  #
-# the Free Software Foundation, either version 3 of the License, or     #
-# (at your option) any later version.				        #
-# 								        #
-# This program is distributed in the hope that it will be useful,       #
-# but WITHOUT ANY WARRANTY; without even the implied warranty of        #
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the	        #
-# GNU General Public License for more details.			        #
-# 								        #
-# You should have received a copy of the GNU General Public License     #
-# along with this program.  If not, see <http://www.gnu.org/licenses/>. #
-#########################################################################
-
-#############################################################################################
-# A simple, lightweight .conkyrc.							    #
-# This conky has been originally forked from the default one that comes with ArchBang Linux #
-# 											    #
-# References:										    #
-# - http://conky.sourceforge.net/conkyrc-vert						    #
-# - http://conky.sourceforge.net/variables.html						    #
-# - conky man page									    #
-#############################################################################################
-
-background yes
-# better fonts
-use_xft yes
-xftfont monospace:size=9
-xftalpha 1
-update_interval 2.0
-total_run_times 0
-own_window_class Conky
-own_window yes
-own_window_transparent no
-own_window_type normal # normal
-own_window_hints undecorated,below,sticky,skip_taskbar,skip_pager
-own_window_colour black
-double_buffer yes
-minimum_size 1 1
-maximum_width 230
-draw_shades no
-draw_outline no
-draw_borders yes
-draw_graph_borders yes
-default_color gray
-default_shade_color 000000
-default_outline_color d9d7d6
-alignment mr 	      # alt: alignme
-nt middle_right
-# span
-gap_x 12
-gap_y 12
-no_buffers yes
-uppercase no
-cpu_avg_samples 2
-override_utf8_locale yes
-color1 red
-color2 gray
-
-##############################################
-#  Output                                    #
-##############################################
-TEXT
-${font sans-serif:bold:size=8}OVERVIEW ${hr 2}${font sans-serif:normal:size=8}
-# BAT:$alignr${battery_short BAT1} - ${battery_time BAT1}
-BAT:$alignr${battery BAT1} - ${battery_time BAT1}
-${battery_bar BAT1}
-CPUs: $alignr${cpu cpu0}% | ${cpu cpu1}% | ${cpu cpu2}% | ${cpu cpu3}%
-
-RAM: $alignr$mem/$memmax
-$membar
-SWAP: $alignr$swap/$swapmax
-$swapbar
-
-DISK:
-# /$alignr${fs_used /}/${fs_size /}  ${fs_bar 5,30 /}
-/$alignr${fs_used /}/${fs_size /}
-${fs_bar /}
-/home$alignr${fs_used /home}/${fs_size /home}
-${fs_bar /home}
-
-${font sans-serif:bold:size=8}NETWORK ${hr 2}${font sans-serif:normal:size=8}
-${wireless_essid wlp2s0}$alignr${addr wlp2s0}
-Link: $alignr ${wireless_link_qual wlp2s0}/${wireless_link_qual_max wlp2s0}
-${wireless_link_bar wlp2s0}
-${color 00ff00}Download:   ${totaldown wlp2s0}$alignr${downspeedf wlp2s0} kB/s
-${color 28d1e9}Upload:       ${totalup wlp2s0}$alignr${upspeedf wlp2s0} kB/s
-
-${color gray}${font sans-serif:bold:size=8}SYSTEM ${hr 2}${font sans-serif:normal:size=8}
-$sysname $kernel $alignr$machine
-Host:$alignr$nodename
-Uptime:$alignr$uptime
-Processes:$alignr$processes 
-
-${font sans-serif:bold:size=8}TOP RAM${hr 2}${font sans-serif:normal:size=8}
-${top_mem name 1}${alignr}${top_mem mem_res 1}  ${top_mem mem 1} %
-${top_mem name 2}${alignr}${top_mem mem_res 2}  ${top_mem mem 2} %
-${top_mem name 3}${alignr}${top_mem mem_res 3}  ${top_mem mem 3} %
-${top_mem name 4}${alignr}${top_mem mem_res 4}  ${top_mem mem 4} %
-${top_mem name 5}${alignr}${top_mem mem_res 5}  ${top_mem mem 5} %
-
-${font sans-serif:bold:size=8}TOP CPU${hr 2}
-${font sans-serif:normal:size=8}${top name 1}${alignr}${top cpu 1} %
-${top name 2}${alignr}${top cpu 2} %
-${top name 3}${alignr}${top cpu 3} %
-${top name 4}${alignr}${top cpu 4} %
-${top name 5}${alignr}${top cpu 5} %
+#!/bin/bash
+conky -c ~/.conky/.conkyrc_clock &
+conky -c ~/.conky/.conkyrc_main &
+conky -c ~/.conky/.conkyrc_audio &
