--- a/.conkyrc
+++ b/.conkyrc
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/bin/sh
 # conky -c ~/.conky/.conkyrc_clock &
+# conky -c ~/.conky/.conkyrc_audio &
 conky -c ~/.conky/.conkyrc_main &
-conky -c ~/.conky/.conkyrc_audio &
