--- a/.fluxbox/styles/ubuntu/theme.cfg
+++ b/.fluxbox/styles/ubuntu/theme.cfg
@@ -2,19 +2,19 @@
 
 # Background
 
-background: 					flat
-background.color: 				#000000
-background.colorTo:				#000000
+# background: 					flat
+# background.color: 				#000000
+# background.colorTo:				#000000
 
 # Fonts
 					
-menu.frame.font:                                sans-10
-menu.title.font:			        sans-10
-toolbar.clock.font:			        sans-10
-toolbar.workspace.font:			        sans-10
-toolbar.iconbar.focused.font:		        sans-10
-toolbar.iconbar.unfocused.font:                 sans-10
-window.font:				        sans-9:bold
+menu.frame.font:                                opensans-10
+menu.title.font:			        opensans-10
+toolbar.clock.font:			        opensans-10
+toolbar.workspace.font:			        opensans-10
+toolbar.iconbar.focused.font:		        opensans-10
+toolbar.iconbar.unfocused.font:                 opensans-10
+window.font:				        opensans-9:bold
 
 # Menu
 
