--- a/etc/pacman.conf
+++ b/etc/pacman.conf
@@ -14,6 +14,8 @@
 #CacheDir    = /var/cache/pacman/pkg/
 #LogFile     = /var/log/pacman.log
 #GPGDir      = /etc/pacman.d/gnupg/
+#HoldPkg     = pacman glibc libdbusmenu-glib
+#cst
 HoldPkg     = pacman glibc
 #XferCommand = /usr/bin/curl -C - -f %u > %o
 #XferCommand = /usr/bin/wget --passive-ftp -c -O %o %u
@@ -31,10 +33,10 @@ Architecture = auto
 # Misc options
 #UseSyslog
 Color
-ILoveCandy
 #TotalDownload
 CheckSpace
 VerbosePkgLists
+ILoveCandy
 
 # By default, pacman accepts packages signed by keys that its local keyring
 # trusts (see pacman-key and its man page), as well as unsigned packages.
@@ -99,9 +101,10 @@ Include = /etc/pacman.d/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 
-[xyne-x86_64]
-# A repo for Xyne's own projects: http://xyne.archlinux.ca/projects/
-# Packages for the "x86_64" architecture.
-# Note that this includes all packages in [xyne-any].
-SigLevel = Required
-Server = http://xyne.archlinux.ca/repos/xyne
+#[ede]
+#SigLevel = Optional
+#Server = http://www.equinox-project.org/repos/arch/$arch
+
+[mate]
+SigLevel = Optional TrustAll
+Server = http://repo.mate-desktop.org/archlinux/$arch
