simplified .emacs files

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -12,7 +12,7 @@ general {
 }
 
 order += "cpu_temperature 0"
-order += "disk /"
+# order += "disk /"
 # order += "run_watch DHCP"
 # order += "run_watch VPN"
 order += "wireless wlp2s0"
