better emacs, added redshift

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -19,11 +19,19 @@ order += "wireless wlp2s0"
 # order += "ethernet eth0"
 order += "battery 1"
 # order += "load"
+order += "volume master"
 order += "tztime local"
 
 cpu_temperature 0 {
 	format = "T: %degrees °C"
 	max_threshold = 65
+}
+
+volume master {
+       format = "V: %volume"
+       device = "default"
+       mixer = "Master"
+       mixer_idx = 0
 }
 
 wireless wlp2s0 {
@@ -38,10 +46,10 @@ ethernet eth0 {
 }
 
 battery 1 {
-#       format = "%status %percentage %remaining"
+# %status %percentage %remaining
 	format = "%status %percentage"
 	path = "/sys/class/power_supply/BAT%d/uevent"
-	low_threshold = 10
+	low_threshold = 20
 }
 
 run_watch DHCP {
