--- a/.i3/config
+++ b/.i3/config
@@ -193,10 +193,19 @@ bindsym $mod+m move scratchpad
 bindsym $mod+o scratchpad show
 
 # Options tweaking
+default_orientation auto
+focus_follows_mouse yes
+hide_edge_borders vertical
+workspace_auto_back_and_forth yes
 workspace_layout tabbed
 
+# assign: use xprop to learn the class string
+assign [class="^Sakura$"] → "1:Shell"
+assign [class="^Chromium$"] → "2:Web"
+assign [class="^Firefox$"] → "2:Web"
 
-# Floating applications: use xprop to learn the class string
+
+# for_window
 for_window [class="^feh$"] floating enable
 for_window [class="^Chromium$"] border 1pixel
 for_window [class="^gimp$"] floating enable
@@ -210,6 +219,7 @@ exec --no-startup-id sh ~/.fehbg
 # Background
 exec --no-startup-id /usr/bin/CopyAgent
 exec --no-startup-id /usr/bin/dropboxd
-exec --no-startup-id LC_ALL=C /usr/bin/parcellite &
-exec --no-startup-id /usr/bin/volumeicon
+exec --no-startup-id LC_ALL=C /usr/bin/parcellite
+exec --no-startup-id /usr/bin/redshift-gtk
+# exec --no-startup-id /usr/bin/volumeicon
 exec --no-startup-id /usr/bin/wicd-gtk -t
