--- a/.conkyrc
+++ b/.conkyrc
@@ -1,4 +1,4 @@
-# -*- lua -*-
+# -*- conf -*-
 
 #########################################################################
 # A simple, lightweight conky config.					#
