--- a/.i3/config
+++ b/.i3/config
@@ -200,7 +200,7 @@ bindsym $mod+o scratchpad show
 # Options tweaking
 default_orientation auto
 focus_follows_mouse yes
-hide_edge_borders vertical
+# hide_edge_borders vertical
 workspace_auto_back_and_forth yes
 workspace_layout tabbed
 
